Disable rss and taxonomy

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -3,6 +3,7 @@ baseurl = "https://example.org/"
 languageCode = "en-us"
 title = "BlackTie.co | Free Bootstrap Themes"
 theme = "hugo-smpl-theme"
+disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 
 # Enter your tracking code to enable Google analytics
 googleAnalytics = "UA-XXXXXXXX-1"
