Update homepage link

--- a/theme.toml
+++ b/theme.toml
@@ -12,7 +12,7 @@ min_version = 0.21
 
 [author]
   name = "Christian Mendoza"
-  homepage = "//christianmendoza.me"
+  homepage = "//iamchristian.me"
 
 # If porting an existing theme
 [original]
