--- a/theme.toml
+++ b/theme.toml
@@ -1,14 +1,14 @@
 # theme.toml template for a Hugo theme
-# See https://github.com/spf13/hugoThemes#themetoml for an example
+# See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
 name = "SMPL"
-license = "Creative Commons Attribution 3.0 Unported License"
-licenselink = "//github.com/christianmendoza/hugo-smpl-theme/blob/master/LICENSE"
-description = "A really simple theme to share your contact information and social links. SMPL uses font awesome 4.6.3 and a beautiful jscript to correctly stretch your image background. Created by BlackTie.co."
+license = "Creative Commons Attribution 3.0 Unported"
+licenselink = "//github.com/christianmendoza/hugo-smpl-theme/blob/master/LICENSE.md"
+description = "A really simple theme to share your contact information and social links."
 homepage = "//github.com/christianmendoza/hugo-smpl-theme"
-tags = ["social", "onepage", "one page", "configurable", "responsive", "personal", "google analytics"]
-features = ["social", "onepage", "one page", "configurable", "responsive", "personal", "google analytics"]
-min_version = 0.21
+tags = ["minimal", "onepage", "one page", "responsive", "personal"]
+features = []
+min_version = "0.21"
 
 [author]
   name = "Christian Mendoza"
@@ -16,6 +16,6 @@ min_version = 0.21
 
 # If porting an existing theme
 [original]
-  name = "BlackTie.co - SMPL"
+  name = "Black Tie"
   homepage = "http://blacktie.co/2013/12/smpl-a-simple-contact-page/"
   repo = ""
